# VocalSim-2p5D-FDTD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: device_specs.txt
data/tube-geometry/: cylindrical-tube.txt  vocaltract_a.txt  vocaltract_i.txt  vocaltract_u.txt
include/: DeviceSymbols.h  FDTDEngineCPU.h  FDTDEngineEigen.h  FDTDSolver.h  GlottalExcitations.h  ShapeAlignment.h  ShapeCoordinates.h  ShapeGenerator.h  SimulationParams.h  SimulationUnits.h  SolverParams.h  TestTwoMassModel.h  TubeDepth.h  TubeGeometry.h  TwoMassModel.h  Utils.h
results/: formants_bandwidths.py  generate_audio.py  plt_excitation_velocity.py  plt_section_shape.py  plt_transfer_function.py
src/: DeviceSymbols.cu  FDTDEngineCPU.cpp  FDTDEngineEigen.cpp  FDTDSolver.cu  GlottalExcitations.cu  ShapeAlignment.cu  ShapeGenerator.cpp  SimulationParams.cu  SolverParams.cu  TubeDepth.cu  TubeGeometry.cu  TwoMassModel.cpp  Utils.cpp  main.cu
